--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,147 @@
 .nav-item a {
   --clippy: polygon(0 0, 0 0, 0 100%, 0% 100%);
 }
+/* Estilos del carrito de compras */
+.icon-cart{
+  width: 45px;
+  height: 45px;
+  stroke: #fff;
+  /* background: #fff; */
+  padding-left: 12px;
+}
+
+.icon-cart:hover{
+  cursor: pointer;
+}
+
+/* img{
+  max-width: 100%;
+} */
+
+/* Header */
+/* header{
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 0 40px 0;
+} */
+
+.container-icon{
+  position: relative;
+}
+
+.count-products{
+  position: absolute;
+  top: 55%;
+  right: 0;
+
+  background-color: #ffc212;
+  color: #000;
+  width: 20px;
+  height: 20px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+#contador-productos{
+  font-size: 12px;
+}
+
+.container-cart-products{
+  position: absolute;
+  top: 70px;
+  right: 0;
+  /* color: #fff; */
+
+  background-color: #fff;
+  /* background-color: transparent; */
+  width: 400px;
+  z-index: 200;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
+  border-radius: 10px;
+  /* border-color: #fff; */
+  
+}
+
+.cart-product{
+  display: flex;
+  /* align-items: center; */
+  justify-content: space-between;
+  padding: 20px;
+  font-family: "Roboto", sans-serif;
+  font-size: 17px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.20);
+  align-items: baseline;
+
+}
+
+.info-cart-product{
+  display: flex;
+  justify-content: space-between;
+  flex: 0.8;
+
+}
+
+.titulo-producto-carrito{
+  /* font-size: 18px; */
+}
+
+.precio-producto-carrito{
+  font-weight: 600;
+  /* font-size: 17px; */
+  margin-left: 10px;
+}
+
+.cantidad-producto-carrito{
+  font-weight: 400;
+  /* font-size: 17px; */
+}
+
+.icon-close{
+  width: 20px;
+  height: 20px;
+}
+
+.icon-close:hover{
+  stroke: red;
+  cursor: pointer;
+}
+
+.cart-total{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0;
+  gap: 20px;
+}
+
+.cart-total h3{
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.total-pagar{
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.hidden-cart{
+  display: none;
+}
+
+
+
+
+
+
+.cart-empty{
+  padding: 10px;
+  text-align: center;
+}
+
+
 
 .nav-item a::after {
   content: "";
@@ -19,6 +160,10 @@
 .nav-item a:hover {
   --clippy: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
+
+
+
+
 
 .img-home-2 {
   -webkit-animation: animar 4s 1 linear;
